--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             </p>
 
             <ul class="social-links mt-2">
-              <li><a href="https://steamcommunity.com/id/spiritrit/" target="_blank rel="noopener" class="fab fa-steam"></a></li>
-                    <li><a href="https://www.linkedin.com/in/akif-tuna-114a95226/" rel="noopener" target="bla" class="fab fa-linkedin"></a></li>
-                    <li><a href="https://www.youtube.com/@spiritrit" rel="noopener" target="_blank" class="fab fa-youtube"></a></li>
+             
+                    <li><a href="https://www.linkedin.com/in/akif-tuna-114a95226/" rel="noopener" target="_blank" class="fab fa-linkedin"></a></li>
+                    
                     <li><a href="https://github.com/AkifTuna" rel="noopener" target="_blank" class="fab fa-github"></a></li>
             </ul>
 
